--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: MSU CSE Outreach
-description: Technology's future begins in today's classrooms
+title: MSU Spartan Coding Clubs
+description: CS Outreach and Community Engagement
