--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: MSU Spartan Coding Clubs
-description: CS Outreach and Community Engagement
+title: MSU Spartan Coding Clubs (SPARCC)
+description: Computer Science Outreach and Community Engagement
